feat(design): add particle system and cursor glow animations
- Created ParticleSystem class with 80 floating particles
- Implemented CursorGlowEffect for elegant mouse tracking
- Added card entrance animations with staggered delays
- Added text fade-in and floating animations
- Enhanced button hover effects with overlay animations
- Added smooth scroll behavior
- All glassmorphism design now fully animated

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Fondo animado con partículas y efectos -->
+    <div id="particles-container"></div>
+    <div class="animated-bg"></div>
     <div class="container">
         <header>
             <h1>🎮 Gaming Vocabulary Master</h1>
@@ -283,6 +286,8 @@
         </div>
     </div>
 
+    <script src="js/particles.js"></script>
+    <script src="js/cursor-effects.js"></script>
     <script src="config-proxy.js"></script>
     <script src="config.js"></script>
     <script src="vocabulary.js"></script>
